--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@emotion/core": "^10.0.21",
     "@emotion/styled": "^10.0.17",
     "autoprefixer": "^9.6.4",
+    "d3": "^5.12.0",
     "emotion": "^10.0.17",
     "extract-text-webpack-plugin": "^3.0.2",
     "gatsby": "^2.15.36",
@@ -26,6 +27,7 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
+    "react-d3-library": "^1.1.8",
     "react-debounce-input": "^3.2.0",
     "react-dom": "^16.10.2",
     "react-helmet": "^5.2.0",
